[package]
name = "gml_fmt"
version = "0.1.0"
authors = ["Jack Spira <jjspira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
criterion = "0.2.11"


[[bench]]
name = "speed_test"
harness = false

[[bin]]
name = "gml_fmt"