[package]
name = "gml_fmt"
version = "1.0.0"
authors = ["Jack Spira <jjspira@gmail.com>"]
edition = "2018"


[dependencies]
clap = "2.33.0"
bitflags = "1.1.0"
fnv = "1.0.6"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.2"
logos = "0.9.7"


[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "speed_test"
harness = false

[[bin]]
name = "gml_fmt"