[package]
name = "gml_fmt_lib"
version = "1.0.1"
authors = ["Jack Spira <jjspira@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.1.0"
fnv = "1.0.6"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.2"
once_cell = "1.3"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "speed_test"
harness = false