[package]
name = "gml_fmt_lib"
version = "1.0.1"
authors = ["Jack Spira <jjspira@gmail.com>"]
edition = "2018"
description = "A formatter for Gms2.2 files. This does not work with Gms2.3 files (yet)."
license = "MIT"

[dependencies]
bitflags = "1.1.0"
fnv = "1.0.6"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.2"
once_cell = "1.3"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "speed_test"
harness = false